dokumentacja/misja_9/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: pdsddi
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP # Ingress będzie zarządzał dostępem zewnętrznym
